deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab1-deployment
  labels:
    app: lab1-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab1-nginx
  template:
    metadata:
      labels:
        app: lab1-nginx
    spec:
      volumes:
        # Create the shared files volume to be used in both pods
        - name: shared-files
          emptyDir: { }

        # Add the ConfigMap we declared above as a volume for the pod
        - name: nginx-config-volume
          configMap:
            name: lab1-nginx-config
      containers:
        - name: lab1-php
          image: igbas/lab-php:v1
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "cp -r /app/. /var/www/html/public" ]
        - name: lab1-nginx
          #image: nginx:1.21-alpine
          image: igbas/lab1-nginx
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
#          - name: nginx-config-volume
#            mountPath: /etc/nginx/conf.d/default.conf
#            subPath: custom.conf
