service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab1-nginx-service
spec:
  selector:
    app: lab1-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
