ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
        - path: /health(/?$)
          pathType: Prefix
          backend:
            service:
              name: lab1-nginx-service
              port:
                number: 80

        - path: /otusapp/(\w+/.*)
          pathType: Prefix
          backend:
            service:
              name: lab1-nginx-service
              port:
                number: 80
